# fleet

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  changelog.md  fleet.sh  package.json  transcript.txt
.github/workflows/: ci.yml  release.yml
docs/: completion-audit-v0.md  product-vision.md  releasing.md  spec-v0.md  verification.md
docs/research/: fleet-v0-platform-assumptions.md
npm/: check-pack.mjs  check-versions.mjs  install.mjs
src/: cli.rs  commands.rs  config.rs  discovery.rs  git_setup.rs  hosted.rs  identity.rs  lib.rs  logging.rs  main.rs  platform.rs  service.rs  setup.rs  skill.rs  ssh.rs  ssh_client.rs  state.rs  status.rs  ui.rs  updater.rs
tests/: cli.rs  macos_bonjour.rs
