[package]
name = "fleet-cli"
version = "0.5.0"
edition = "2024"
description = "Discover, connect, and set up machines on your network"
license = "MIT"

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
