[package]
name = "fleet-cli"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"
description = "Discover, connect, and set up machines on your network"
license = "MIT"

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
hostname = "0.4"
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
