[package]
name = "fleet"
version = "0.5.0"
edition = "2024"
description = "Local device fabric for AI-assisted development"
license = "MIT"
repository = "https://github.com/extoci/fleet"

[[bin]]
name = "fleet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
dialoguer = "0.11"
dirs = "6.0"
flate2 = "1.1"
hostname = "0.4"
if-addrs = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.20"
terminal_size = "0.4"
tar = "0.4"
tiny_http = "0.12"
toml = "0.9"
uuid = { version = "1.18", features = ["v4", "serde"] }
which = "8.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
